src/global.scss
* {
  box-sizing: border-box;
}

body {
  font-family: "Open Sans",'Helvetica Neue',Helvetica,Arial,sans-serif;

  font-size: 16px;
  line-height: 1.8;

  background-color: #333;
  color: #fff;

  background-image: url('https://www.transparenttextures.com/patterns/axiom-pattern.png');
  //background-image: url('https://www.transparenttextures.com/patterns/3px-tile.png');
  background-attachment: fixed;
}

code[class*="language-"], pre[class*="language-"] {
  font-size: 14px !important;
}

pre[class*="language-"] {
  border-radius: 0 !important;
  border: 1px solid hsl(0, 0%, 33%) !important;
  box-shadow: none !important;
}

a {
  color: #fff;
  background-color: #333;
  padding: 0 5px;
  display: inline-block;

  &:hover {
    background-color: #444;
    text-decoration: underline;
  }
}

a.anchor {
  margin-right: 10px;
  svg path {
    fill: #fff;
  }
  background-color: transparent;
}

img, .ff-container {
  display: block !important;
  margin: 0 auto;
  max-width: 500px;
}

.ff-container {
  display: block !important;
  margin: 0 auto;
  max-width: 500px;
  img {
    margin: 0;
    max-width: none;
    width: 100%;
  }
  canvas {
    width: 100%;
  }
}

h1 {

}

h2 {

}

h3 {

}

blockquote {
  border-left: 8px solid #ccc;
  margin-left: 15px;
  padding-left: 15px;
}

table {
  border-collapse: collapse;
  td, th {
    border: 1px solid rgba(255, 255, 255, 0.2);
    padding: 0 10px;
  }
}

